# work-daily-note

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml
docs/: usage.md
docs/design/: 2026-06-08-tauri-migration-design.md  2026-06-08-ui-redesign-design.md  2026-06-08-work-daily-note-design.md
issues/: 2026-06-08_17-24-00-ui-redesign.csv  2026-06-08_17-24-00-ui-redesign.review.md
scripts/: check-project.js  create-updater-latest-json.js  set-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_client.rs  main.rs  reminder.rs  store.rs
src/main/: aiClient.js  main.js  preload.js  reminder.js  store.js
src/renderer/: app.js  index.html  styles.css
src/shared/: categories.js  dates.js
