[package]
name = "work-daily-note"
version = "0.1.1"
description = "Win11 desktop note app for organizing daily work notes into ZenTao-ready text."
authors = ["wyeye"]
edition = "2021"
license = "UNLICENSED"
rust-version = "1.77.2"


[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
chrono = { version = "0.4.45", features = ["clock", "serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-notification = "2.3.3"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
